# clinical-readthrough-alpha

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  research_report.md
.github/workflows/: ci.yml
scripts/: fetch_all.py  generate_report.py  generate_sample_output.py  run_pipeline.py
src/clinical_alpha/: __init__.py  config.py  exceptions.py  logging.py
src/clinical_alpha/backtest/: engine.py
src/clinical_alpha/clinical_trials/: fetcher.py
src/clinical_alpha/data/: quality.py
src/clinical_alpha/events/: extractor.py
src/clinical_alpha/fda/: fetcher.py
src/clinical_alpha/graph/: builder.py  models.py
src/clinical_alpha/matching/: normalizer.py
src/clinical_alpha/prices/: pipeline.py
src/clinical_alpha/reporting/: generator.py
src/clinical_alpha/returns/: abnormal.py  factor_models.py  statistical_tests.py
src/clinical_alpha/risk/: __init__.py  model.py
src/clinical_alpha/robustness/: checks.py
src/clinical_alpha/sec/: edgar.py
src/clinical_alpha/signal/: __init__.py  analysis.py
src/clinical_alpha/studies/: event_study.py
src/clinical_alpha/universe/: __init__.py  builder.py
tests/: conftest.py  test_abnormal_returns.py  test_backtest.py  test_backtest_upgraded.py  test_data_quality.py  test_event_study.py  test_event_windows.py  test_factor_model_upgrades.py  test_factor_models.py  test_graph_peers.py  test_integration.py  test_normalization.py  test_risk.py  test_risk_model_upgraded.py  test_robustness.py  test_signal_analysis.py  test_statistical_tests.py  test_statistical_tests_upgraded.py
